--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,20 +1,32 @@
 body {
   margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto Mono";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  box-sizing: border-box;
 }
 
-.p {
+code {
+  font-family: "Roboto Mono", monospace;
+}
+
+p {
+  font-size: 12px;
+}
+
+.thought-p {
+  font-weight: 600;
+  color: #333;
+}
+
+.form-title {
   font-size: 11px;
-  margin: 0;
+  font-weight: 600;
+  font-family: "Roboto Mono";
+  color: #333;
 }
 
 .h3 {
@@ -22,36 +34,56 @@ code {
 }
 
 /* send thought btn*/
+
 .send-btn {
+  margin-top: 10px;
   border-radius: 50%;
-  width: 50%;
+  width: 55%;
   height: 40px;
   display: block;
   border-radius: 3em;
   font-weight: 700;
   color: rgb(63, 62, 62);
   background-color: rgb(255, 173, 173);
+  font-family: "Roboto Mono";
   text-align: center;
   font-size: 10px;
+  margin-bottom: 10px;
 }
+
 /* red hearts in send thought btn*/
+
 .send-heart {
   color: rgb(255, 64, 50);
   margin-right: 5px;
   margin-left: 5px;
+  font-size: 14px; /* emoji size is adjusted with font-size */
+}
+
+legend {
+  color: #333;
+  padding: 5px;
+  position: relative;
+  font-weight: 600;
+  color: rgb(255, 173, 173);
+  font-family: "Roboto Mono";
+  font-weight: 700;
+}
+
+fieldset {
+  padding: 10px 25px 20px 20px;
+  width: 320px;
+}
+
+fieldset > legend {
+  margin: -5px;
 }
 
 .textarea {
-  width: auto;
-  color: aqua;
-}
-
-.input {
-  color: red;
-  width: 90%;
-  height: 40px;
-  border-color: rgb(207, 207, 207);
-  border: 4px;
+  width: 95%;
+  height: 45px;
+  border: 1px solid rgb(207, 207, 207);
+  background-color: #fff;
 }
 
 button {
@@ -62,11 +94,13 @@ button {
 
 .btn {
   display: inline-block;
-  border-radius: 100%;
+  border-radius: 50%;
   color: rgb(255, 64, 50);
   background-color: rgb(255, 173, 173);
-  width: 10%;
-  height: 27px;
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+  margin-bottom: 8px;
 }
 
 .app {
@@ -78,112 +112,61 @@ button {
   align-items: left;
   flex-direction: column;
   width: 300px;
-  height: 180px;
   background-color: rgb(242, 240, 240);
-  /* padding: 1rem 1rem 1 rem 1 rem; */
   border: 1px solid rgb(2, 2, 2);
   box-shadow: 7px 7px rgb(2, 2, 2);
-
   border-radius: 2px;
   margin-bottom: 1.5rem;
+  padding: 10px;
 }
 
-.form-container {
-  padding: 5px;
-}
-.thoughts {
+.thoughts-card {
   display: flex;
   flex-direction: column;
   align-items: left;
   width: 300px;
-  height: 180px;
   border: 1px solid #333;
   margin-bottom: 1rem;
-  height: 140px;
   border: 1px solid rgb(63, 62, 62);
   box-shadow: 7px 7px rgb(63, 62, 62);
-}
-
-.thoughts-card {
   padding: 10px;
 }
 
 .thoughts-container {
-  padding: 5px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .btn-heart {
-  color: red;
+  color: rgb(255, 64, 50);
 }
 
-/* .loading-heart {
-  width: 150px;
-  height: 150px;
+.heart-likes {
   display: flex;
-  justify-content: center;
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-  animation: heartbeat 1s infinite;
-} */
+}
 
-/* #loading-heart:before,
-#loading-heart:after {
-  position: absolute;
-  content: "";
-  left: 50px;
-  top: 0;
-  width: 50px;
-  height: 80px;
-  background: #fff;
-  -moz-border-radius: 50px 50px 0 0;
-  border-radius: 50px 50px 0 0;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-transform-origin: 0 100%;
-  -moz-transform-origin: 0 100%;
-  -ms-transform-origin: 0 100%;
-  -o-transform-origin: 0 100%;
-  transform-origin: 0 100%;
-} */
-/* #loading-heart:after {
-  left: 0;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  -webkit-transform-origin: 100% 100%;
-  -moz-transform-origin: 100% 100%;
-  -ms-transform-origin: 100% 100%;
-  -o-transform-origin: 100% 100%;
-  transform-origin: 100% 100%;
-} */
-/* 
-@keyframes loading-heart {
-  0% {
-    transform: scale(0.75);
-  }
-  20% {
-    transform: scale(1);
-  }
-  40% {
-    transform: scale(0.75);
-  }
-  60% {
-    transform: scale(1);
-  }
-  80% {
-    transform: scale(0.75);
-  }
-  100% {
-    transform: scale(0.75);
-  }
-} */
+.counter {
+  width: 20px;
+  height: 20px;
+  fill: blue;
+  stroke: rgb(255, 64, 50);
+  border-radius: 50%;
+  transform: rotate(-90deg);
+}
+
+.message-count {
+  color: rgb(63, 62, 62);
+  display: flex;
+  flex-direction: row;
+  padding-top: 12px;
+  padding-left: 50px;
+}
+
+.counter-btn {
+  display: flex;
+  flex-direction: row;
+}
 
 .loading-overlay {
   position: absolute;
@@ -205,6 +188,7 @@ button {
   border-left: 5px solid #fff;
   animation: spinner infinite 1s;
 }
+
 @keyframes spinner {
   0% {
     transform: rotate(0);
