--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +10,104 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.date {
+  font-style: italic;
+}
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: solid pink;
+  border-radius: 50%;
+  border-left: 5px solid white;
+  animation: spin infinite 1s;
+  display: inline-block;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.thought-container {
+  margin: auto;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 55%;
+}
+.happy-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 40px;
+  gap: 10px;
+  border: 2px solid;
+  box-shadow: 8px 8px 0;
+  padding: 20px;
+  background-color: whitesmoke;
+  max-width: 484px;
+  margin: 20px auto;
+}
+
+.newThought {
+  width: 97%;
+  margin-top: 10px;
+  height: 40px;
+  box-sizing: content-box;
+  outline: none;
+  padding-inline-start: 10px;
+  padding-top: 10px;
+  padding-bottom: 25px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.thought-item {
+  display: block;
+  flex-direction: column;
+  margin: 20px;
+  padding: 10px;
+  border: 2px solid #000;
+  box-shadow: 6px 6px 0px #000;
+  word-break: break-word;
+  min-height: 100px;
+  background-color: #ffe8e8;
+}
+
+.submit-btn {
+  font-family: inherit;
+  background: #ffadad;
+  height: 40px;
+  border-style: outset;
+  border-color: grey;
+  padding: 5px 15px;
+  font-size: inherit;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.heart-btn {
+  background: #ffadad;
+  color: #1010104d;
 }
