--- a/code/src/index.css
+++ b/code/src/index.css
@@ -40,7 +40,6 @@ h1 {
   max-width: 550px;
   margin-bottom: 2rem;
   margin-top: 0;
-
 }
 
 .content-area {
@@ -262,6 +261,11 @@ textarea {
 
   body {
     padding-bottom: 1rem;
+  }
+
+  .preamble {
+  margin-right: 1rem;
+  margin-left: 1rem;
   }
 
   .form {
