comment for not yet used code

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,13 +31,12 @@ h1 {
 
 }
 
-.new-thought-label {
+/* .new-thought-label {
 
-}
+} */
 
 .new-thought-input {
   height: 100px;
-
 }
 
 .submit-btn {
