--- a/code/src/components/Header.css
+++ b/code/src/components/Header.css
@@ -1,4 +1,5 @@
 .header {
+  font-size: 24px;
   text-align: center;
   display: block;
   margin: 30px auto 40px;
@@ -9,7 +10,7 @@
 
 /*TABLET*/
 
-@media (min-width: 670px) {
+@media (min-width: 670px) and (max-width: 1049px) {
   .header {
     font-size: 28px;
     margin: 50px auto;
