--- a/code/src/components/NewThought.css
+++ b/code/src/components/NewThought.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 320px;
+  width: 100vw;
   height: fit-content;
   margin: 20px auto 30px;
   border: 1px solid #000;
@@ -19,7 +19,7 @@
 }
 
 textarea {
-  width: 250px;
+  width: 100%;
   height: 50px;
   margin: 10px auto;
   font-size: 14px;
@@ -47,7 +47,7 @@ textarea {
 
 /*TABLET*/
 
-@media (min-width: 670px) {
+@media (min-width: 670px) and (max-width: 1049px) {
   .newThoughtWrapper {
     width: 500px;
     height: 300px;
