--- a/code/src/components/ThoughtsList.css
+++ b/code/src/components/ThoughtsList.css
@@ -49,13 +49,12 @@
 
 .date {
   font-size: 12px;
-
   color: #818080;
 }
 
 /*TABLET*/
 
-@media (min-width: 670px) {
+@media (min-width: 670px) and (max-width: 1049px) {
   .thoughtWrapper {
     width: 500px;
     height: 220px;
