--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: #faebeb;
-  margin: 20px;
+  width: 100%;
+  margin: 20px auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,22 +19,13 @@ code {
 
 p {
   margin: 10px auto;
-  max-width: 80%;
   color: #000;
   font-size: 14px;
   font-family: "Trispace", sans-serif;
   font-weight: 500;
+  word-wrap: break-word;
 }
 
-/*TABLET*/
-
-@media (min-width: 670px) {
-  h1 {
-    font-size: 28px;
-    margin: 50px auto;
-  }
-  .container {
-    width: 400px;
-    align-items: center;
-  }
+@media (min-width: 670px) and (max-width: 1049px) {
+  /* might add something here??*/
 }
