--- a/code/src/index.css
+++ b/code/src/index.css
@@ -38,6 +38,14 @@ font-family: "Courier New",
     margin: 10px;
 }
 
+/* .p-red {
+  color:red;
+}
+
+.p-blue {
+  color:blue;
+} */
+
 .newThought {
   background-color: #f2f0f0;
   box-shadow: 8px 8px black;
@@ -111,14 +119,34 @@ margin: 0 auto;
     }
   }
 
-.heart {
+
+.heart, .heart-liked {
   border-radius: 50%;
   margin: 10px;
   border: none;
   height:30px;
   width: 30px;
 }
+.heart {
+  color: #d8d8d8;
+}
 
+.heart:hover {
+  background-color: #acacac;
+}
+
+.heart-liked {
+  background-color: #ffadad;
+}
+
+.heart-liked:hover {
+  background-color: #ff6868;
+}
+
+.letter-counter {
+  text-align: right;
+  display: inline;
+}
 .send-button{
   background-color: #ffadad;
   margin: 8px;
