--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,15 +1,10 @@
 body {
-  margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 0 auto;
+  font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  overflow-wrap: break-word;
+  background-color: lightcoral;
 }
 
 .loading-overlay {
@@ -43,15 +38,72 @@ code {
   }
 }
 
-.date {
-  font-style: italic;
+.feed-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.like-wrapper {
+h1 {
+  font-size: 1.25rem;
+}
+
+input {
+  font-family: inherit;
+}
+
+.feed-wrapper > div,
+.submit-form {
+  padding: 1rem;
+  border: 1px solid black;
+  box-shadow: 0.5rem 0.5rem;
+  width: 80%;
+  max-width: 640px;
+}
+
+.submit-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background: gainsboro;
+}
+
+.submit-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: inherit;
+  font-size: inherit;
+  width: 19rem;
+  border: none;
+  border-radius: 2rem;
+  padding: 0.75rem;
+  background-color: pink;
+}
+
+.feed-wrapper > div {
+  background: mintcream;
+}
+
+.date {
+  font-style: italic;
+  color: gray;
+}
+
+.like-wrapper,
+.like {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 0.4rem;
+}
+
+.like-wrapper {
+  justify-content: space-between;
 }
 
 .heart-btn {
@@ -60,6 +112,17 @@ code {
   width: 4rem;
   border: none;
   border-radius: 50%;
+}
+
+.liked {
+  background-color: pink;
+}
+
+.submit-btn:hover,
+.heart-btn:hover,
+.liked:hover {
+  background-color: palevioletred;
+  cursor: pointer;
 }
 
 .emoji {
