--- a/code/src/index.css
+++ b/code/src/index.css
@@ -176,7 +176,7 @@ h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: #fff;
+  background-color: rgb(173, 96, 96, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -186,9 +186,9 @@ h1 {
   display: inline;
   height: 50px;
   width: 50px;
-  border: 5px solid #a342207d;
+  border: 5px solid rgb(205, 59, 59);
   border-radius: 50%;
-  border-left: 5px solid #e3e0e0cf;
+  border-left: 5px solid rgb(239, 224, 179, 0.81);
   animation: spinner infinite 1s linear;
 }
 
