--- a/code/src/components/ThoughtsList.css
+++ b/code/src/components/ThoughtsList.css
@@ -18,7 +18,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 320px;
+  width: 80%;
+  max-width: 90%;
   height: 150px;
   border: 1px solid black;
   box-shadow: 4px 6px black;
@@ -56,7 +57,8 @@
 
 @media (min-width: 670px) and (max-width: 1049px) {
   .thoughtWrapper {
-    width: 500px;
+    width: 60%;
+    max-width: 70%;
     height: 220px;
   }
 
