--- a/code/src/components/NewThought.css
+++ b/code/src/components/NewThought.css
@@ -13,7 +13,7 @@
 }
 
 .newThoughtWrapper label {
-  font-size: 14px;
+  font-size: 22px;
   font-weight: 500;
   color: #000;
   margin: 20px auto 15px;
@@ -23,7 +23,7 @@ textarea {
   width: 100%;
   height: 50px;
   margin: 10px auto;
-  font-size: 14px;
+  font-size: 18px;
   border: 1px solid #ffadad;
   border-radius: 2px;
   cursor: text;
@@ -48,30 +48,30 @@ textarea {
 
 /*TABLET*/
 
-@media (min-width: 670px) and (max-width: 1049px) {
+@media (min-width: 700px) {
   .newThoughtWrapper {
-    width: 60%;
-    max-width: 70%;
-    height: 300px;
+    width: 90%;
+    max-width: 90%;
+    height: 400px;
   }
   .newThoughtWrapper label {
-    font-size: 18px;
+    font-size: 30px;
     color: #000;
     margin: 20px auto 15px;
   }
 
   textarea {
-    width: 300px;
-    height: 80px;
-    font-size: 16px;
+    width: 80%;
+    height: 100px;
+    font-size: 22px;
     border-radius: 4px;
   }
 
   .charactersLeft {
-    font-size: 16px;
+    font-size: 22px;
   }
 
   .sendThought {
-    font-size: 16px;
+    font-size: 22px;
   }
 }
