--- a/code/src/index.css
+++ b/code/src/index.css
@@ -190,7 +190,7 @@ textarea:focus:invalid {
 }
 
 .icon:hover {
-  background-color: whitesmoke;
+  background-color: rgb(245, 150, 150);
 }
 
 .time {
