--- a/code/src/index.css
+++ b/code/src/index.css
@@ -51,7 +51,6 @@ code {
   box-shadow: 5px 5px;
   padding: 20px;
   background-color: white;
-
   display: flex;
   flex-direction: column;
 }
@@ -77,23 +76,15 @@ code {
 textarea {
   font-size: 17px;
   font-family: 'Trispace', sans-serif;
-  width: 100%;
   height: 80px;
   max-width: 470px;
   max-height: 150px;
-	padding: 10px;
+  padding: 10px;
 }
 
 .button-container {
-  margin: 20px auto;
-  border: 2px solid black;
-  width: 350px;
-  box-shadow: 5px 5px;
-  padding: 20px;
-  background-color: white;
-
   display: flex;
-  justify-content: space-around;
+  gap:15px;
 }
 
 button {
@@ -112,13 +103,25 @@ button:hover {
   box-shadow: 5px 5px;
 }
 
+label {
+  font-size: 20px;
+}
+
+input {
+  margin-left: 10px;
+}
+
+.fa-trash-alt {
+  font-size: 16px;
+}
+
 
 
 /* MEDIA QUERIES */ 
 
 @media(min-width:1024px) {
   .form {
-      width: 500px;
+    width: 500px;
   }
 }
 
@@ -126,7 +129,7 @@ button:hover {
 
 @media(min-width:1024px) {
   .thought-card {
-      width: 500px;
+    width: 500px;
   }
 }
 
@@ -134,11 +137,11 @@ button:hover {
 
 @media(min-width:1024px) {
   .button-container {
-      width: 500px;
+    width: 500px;
   }
 
   button {
-      width: 200px;
+    width: 200px;
   }
 }
 
