--- a/code/src/index.css
+++ b/code/src/index.css
@@ -231,6 +231,21 @@ code {
   justify-content: center;
   align-items: center;
 }
+.additional-info {
+  display: flex;
+  justify-content: space-between;
+}
+.button-delete {
+  background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+  color: grey;
+  font-size: 25px;
+}
+.button-delete:hover {
+  color: #ef4234;
+}
 
 @keyframes spinner {
   0% {
