--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/assets/background.jpg");
+  background-image: url("/assets/memphis_smaller-01.png");
   background-size: cover;
   
 }
@@ -30,7 +30,7 @@ top: 0;
 bottom: 0;
 left: 0;
 right: 0;
-background-color: honeydew;
+background-color: #FDAEAD;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -57,18 +57,21 @@ h1 {
   font-family: 'Roboto Mono', monospace;
   font-size: 60px;
   font-weight: 700;
-  text-shadow: 3px 3px 3px black;
+  text-shadow: 4px 4px 10px #FDAEAD;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
   text-align: center;
   margin: 30px;
   color:white;
+background-color: white;
 }
 /*Containers*/
 
 .form-container{
   width: 100%;
   margin: 40px auto;
-  border: 1px solid black;
-  box-shadow: 13px 13px black;
+  border: 4px solid black;
+  box-shadow: 13px 13px #878DF7;
   display: flex;
   flex-direction: column;
   background-color: #F3F0F0;
@@ -77,8 +80,8 @@ h1 {
 .message-container{
   width: 100%;
   margin: 40px auto;
-  border: 1px solid black;
-  box-shadow: 13px 13px black;
+  border: 4px solid black;
+  box-shadow: 13px 13px #878DF7;
   background-color: white;
 }
 /*Form for thought-submission*/
@@ -102,7 +105,7 @@ h1 {
   flex-direction: row;
   align-items: center;
 }
-/*Styles the thought-submit button*/
+/*Styles thought-submit button*/
 .submit-button {
   width: 50%;
   height: 60px;
