--- a/code/src/index.css
+++ b/code/src/index.css
@@ -68,7 +68,7 @@ background-color: white;
 /*Containers*/
 
 .form-container{
-  width: 100%;
+  width: 90%;
   margin: 40px auto;
   border: 4px solid black;
   box-shadow: 13px 13px #878DF7;
@@ -78,7 +78,7 @@ background-color: white;
 
 }
 .message-container{
-  width: 100%;
+  width: 90%;
   margin: 40px auto;
   border: 4px solid black;
   box-shadow: 13px 13px #878DF7;
@@ -99,6 +99,15 @@ background-color: white;
   font-family: 'Roboto Mono', monospace;
   padding: 10px;
 }
+
+.name-input{
+  margin: 10px auto;
+  padding: 10px;
+  width: 90%;
+  font-family: 'Roboto Mono', monospace;
+  border: none;
+  
+}
 /*This is the button-character counter wrapper*/
 .button-count{
   display: flex;
@@ -112,7 +121,7 @@ background-color: white;
   min-width: 250px;
   margin: 10px auto 5px 25px;
   border-radius: 40px;
-  background-color: #FDAEAD;
+  background-color: #F175A5;
   border:none;
   display: flex;
   justify-content: center;
@@ -152,16 +161,24 @@ background-color: white;
 
 .displayed-message{
   height: 60px;
-  margin-bottom: 30px;
+  margin: 30px 0;
+  
 }
 
 .thought-message {
-  margin: 70px 35px;
+  margin: 40px 35px;
   font-size: 20px;
   line-height: 25px;
   font-family: 'Roboto Mono', monospace;
   font-weight: bold;
   overflow-wrap: break-word;
+}
+
+.name-message {
+  margin: 15px 35px 30px 35px;
+  font-family: 'Roboto Mono', monospace;
+  color: #878DF7;
+  font-weight: 700;
 }
 /*Row containing Heart button for likes, number of likes and 
 time when last updated*/
@@ -170,7 +187,7 @@ time when last updated*/
   flex-direction: row;
   width: 100%;
   align-items: center;
-  padding-bottom: 20px;
+  padding: 20px 0;
   margin-bottom: 20px;
 }
 /*Heart button and counter for likes*/
@@ -181,8 +198,8 @@ time when last updated*/
   width: 75%; 
 }
 
-.heart-button{
-  color: #EAEAEA;
+.heart-button {
+  background-color: #878DF7;
   border-radius: 50%;
   border: none;
   width: 67px;
