--- a/code/src/index.css
+++ b/code/src/index.css
@@ -115,12 +115,31 @@ input {
   font-size: 16px;
 }
 
+.page-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.page-button {
+	margin-top: 10px;
+  width: 160px;
+  background-color: #ffffff;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Trispace', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* spinner */
 .loading-overlay {
 	position: absolute;
-	top: 0;
+	/*top: 0;*/
 	right: 0;
-	bottom: 0;
+	bottom: 43%;
 	left: 0;
 	background: #ffadad;
 	display: flex;
